echoheaders-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: echoheaders-ingress
spec:
  rules:
  - host: echoheaders.local
    http:
      paths:
      - backend:
          serviceName: echoheaders
          servicePort: 80
