allow-ingress-curl.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: echoheaders-allow-curl
spec:
  podSelector:
    matchLabels:
      app: echoheaders
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: curl
  - ports:
    - protocol: TCP
      port: 80
