deny-egress-traffic.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: curl-egress
spec:
  podSelector:
    matchLabels:
      app: curl
  policyTypes:
  - Egress
  egress:
  # allow DNS resolution
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: echoheaders
  ingress: []
