deny-ingress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: echoheaders-deny-all
spec:
  podSelector:
    matchLabels:
      app: echoheaders
  ingress: []
